Added dashboard component

--- a/src/StudentPortal/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/StudentPortal/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">Student Portal</a>
+      <a class="navbar-brand" title="Home" [routerLink]="['/']">Student Portal</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -38,11 +38,6 @@
               >Fetch data</a
             >
           </li>
-          <!--<li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/dashboard']"
-              >Dashboard</a
-            >
-          </li>-->
         </ul>
       </div>
     </div>
