--- a/src/StudentPortal/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/src/StudentPortal/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,5 @@
-<!--<h3 id="tableLabel">Students</h3>-->
 
-<p *ngIf="!students"><em>Loading...</em></p>
-
-<!--<form class="example-form">
+<form class="example-form">
   <mat-form-field class="example-full-width">
     <input matInput placeholder="Favorite food" value="Sushi">
   </mat-form-field>
@@ -10,7 +7,66 @@
   <mat-form-field class="example-full-width">
     <textarea matInput placeholder="Leave a comment"></textarea>
   </mat-form-field>
-</form>-->
+</form>
+
+<!--<button mat-button (click)="OpenAddStudentDialog()">Add Student</button>-->
+
+<div style="overflow:auto;">
+  <div class="mat-elevation-z8">
+    <mat-table [dataSource]="students">
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns:displayedColumns;"></mat-row>
+
+      <!-- Registration Number Column -->
+      <ng-container matColumnDef="RegNumber">
+        <mat-header-cell *matHeaderCellDef> Reg. Number </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.RegNumber}} </mat-cell>
+      </ng-container>
+
+      <!-- First Name Column -->
+      <ng-container matColumnDef="FirstName">
+        <mat-header-cell *matHeaderCellDef> First Name </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.FirstName}} </mat-cell>
+      </ng-container>
+
+      <!-- Options Column -->
+      <ng-container matColumnDef="Options">
+        <mat-header-cell *matHeaderCellDef>Options</mat-header-cell>
+        <mat-cell *matCellDef="let row">
+          <button mat-icon-button (click)="onEdit(row)">
+            <mat-icon>launch</mat-icon>
+          </button>
+          <button mat-icon-button color="warning" (click)="onDelete(row.Id)">
+            <mat-icon>delete_outline</mat-icon>
+          </button>
+          </mat-cell>
+      </ng-container>
+
+
+      <!-- Name Column -->
+      <!--<ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>-->
+
+    </mat-table>
+  </div>
+</div>
+
+
+<!--<h3 id="tableLabel">Students</h3>
+
+<p *ngIf="!students"><em>Loading...</em></p>
+
+<form class="example-form">
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Favorite food" value="Sushi">
+  </mat-form-field>
+
+  <mat-form-field class="example-full-width">
+    <textarea matInput placeholder="Leave a comment"></textarea>
+  </mat-form-field>
+</form>
 <button mat-button (click)="OpenAddStudentDialog()">Add Student</button>
 <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="students">
   <thead>
@@ -33,6 +89,4 @@
       <td>{{ student.dateOfBirth }}</td>
     </tr>
   </tbody>
-</table>
-
-
+</table>-->
