--- a/src/StudentPortal/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/src/StudentPortal/ClientApp/src/app/dashboard/dashboard.component.html
@@ -47,10 +47,10 @@
       <ng-container matColumnDef="Options">
         <mat-header-cell *matHeaderCellDef>Options</mat-header-cell>
         <mat-cell *matCellDef="let row">
-          <button mat-icon-button (click)="onEdit(row)">
+          <button mat-icon-button (click)="editStudent(row)">
             <mat-icon>launch</mat-icon>
           </button>
-          <button mat-icon-button color="warn" (click)="onDelete(row.Id)">
+          <button mat-icon-button color="warn" (click)="deleteStudent(row.id)">
             <mat-icon>delete_outline</mat-icon>
           </button>
           </mat-cell>
