--- a/src/StudentPortal/ClientApp/src/styles.css
+++ b/src/StudentPortal/ClientApp/src/styles.css
@@ -22,10 +22,115 @@ code {
   border-color: #1861ac;
 }
 
-/*.centred-div-flex-container {
-  border-color: red;
+.centred-div-flex-container {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-top: 50px;
-}*/
+  justify-content: space-between;
+}
+
+mat-form-field {
+    width: 100%;
+}
+
+.section-container {
+    padding: 30px;
+}
+
+.card-theme {
+    /*background-color: #191f26;*/
+    border: none;
+    border-radius: 2px;
+}
+
+.card-heading-theme {
+    /*color: #eee;*/
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    padding: 12px;
+}
+
+.card-heading-theme {
+    /*background-color: #494f56;*/
+}
+
+.cards {
+    display: flex;
+    flex-direction: column;
+}
+
+.section-container {
+    padding: 30px;
+}
+
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////*/ /*////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////*/ /*////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+.dashbord {
+  margin-top: 30px;
+  margin-right: 10px;
+  display: inline-block;
+  width: 100%;
+  color: #fff;
+  border-radius: 3px;
+}
+
+.title-section {
+  border-radius: 5px 5px 0px 0px;
+  text-align: center;
+  background-color: #7CD6F8;
+  padding: 7px 0px;
+}
+
+  .title-section p {
+    margin: 0px;
+    font-size: 13px;
+  }
+
+.icon-text-section {
+  background-color: #5BCCF6;
+  padding: 5px 10px;
+}
+
+.icon-section {
+  font-size: 50px;
+  float: left;
+  width: 20%;
+  color: #8BDBF8;
+}
+
+.text-section {
+  width: 80%;
+  float: right;
+  text-align: right;
+}
+
+  .text-section h1 {
+    margin: 0px;
+    font-size: 25px;
+  }
+
+.detail-section {
+  background-color: #52B8DE;
+  cursor: pointer;
+  border-radius: 0px 0px 5px 5px;
+}
+
+  .detail-section div {
+    color: #fff;
+  }
+
+  .detail-section a p {
+    display: inline-block;
+    margin: 0px;
+    font-size: 12px;
+    padding: 10px;
+  }
+
+  .detail-section a i {
+    float: right;
+    padding: 10px 5px 0px 0px;
+  }
+
+.dashbord .detail-section:hover {
+  background-color: #5a5a5a;
+}
