--- a/src/StudentPortal/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/StudentPortal/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+@*<h1>@ViewData["Title"]</h1>*@
 
-@*<div class="row">
-    <div class="col-md-5 col-md-offset-4">*@
 <div class="row">
-    <div class="col-xs-12 col-sm-12">
-        <div class="centred-div-flex-container">
+    <div class="col-md-5 col-md-offset-4">
+@*<div class="row">
+    <div class="col-md-4">*@
+        @*<div class="centred-div-flex-container">*@
             <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
                 <h4>Create a new account.</h4>
                 <hr />
@@ -32,7 +32,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Register</button>
             </form>
-        </div>
+        @*</div>*@
     </div>
 </div>
         @*<div class="col-md-6 col-md-offset-2">
