--- a/src/StudentPortal/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/src/StudentPortal/ClientApp/src/app/dashboard/dashboard.component.html
@@ -116,7 +116,7 @@
         <mat-header-cell *matHeaderCellDef>Options</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <button mat-icon-button (click)="openEditStudentDialog(row)">
-            <mat-icon>launch</mat-icon>
+            <mat-icon>edit</mat-icon>
           </button>
           <button mat-icon-button color="warn" (click)="deleteStudent(row.id)">
             <mat-icon>delete_outline</mat-icon>
