--- a/src/StudentPortal/ClientApp/src/app/home/home.component.html
+++ b/src/StudentPortal/ClientApp/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <h1>Hello, welcome to Student Portal!</h1>
 <p>This portal allows you manage students in your school. Some of the things you can do include:</p>
 <ul>
-  <li>View all students in a tabular / grid form.</li>
+  <li>View all students in a paginated grid format.</li>
   <li>Add, edit and delete students.</li>
-  <li>Search for specific students.</li>
+  <li>Filter / Search for specific students.</li>
   <li>View student distributions by gender, class, and so on...</li>
 </ul>
 <p>To help you get started, you have to:</p>
