--- a/src/StudentPortal/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/StudentPortal/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,9 +5,11 @@
     ViewData["Title"] = "Log in";
 }
 
-<h3>@ViewData["Title"]</h3>
+@* <h3>@ViewData["Title"]</h3> *@
 <div class="row">
-    <div class="col-md-4"></div>
+    <div class="col-md-4">
+
+    </div>
         <div class="col-md-4">
             <section>
                 <form id="account" method="post">
