--- a/src/StudentPortal/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/StudentPortal/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,11 +6,14 @@
 
 @*<h1>@ViewData["Title"]</h1>*@
 
+@* <div class="row">
+    <div class="col-md-5 col-md-offset-4"> *@
 <div class="row">
-    <div class="col-md-5 col-md-offset-4">
-@*<div class="row">
-    <div class="col-md-4">*@
-        @*<div class="centred-div-flex-container">*@
+    <div class="col-md-4">
+        
+    </div>
+        <div class="col-md-4">
+            <section>
             <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
                 <h4>Create a new account.</h4>
                 <hr />
