--- a/src/StudentPortal/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/src/StudentPortal/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,3 @@
-
 <div class="section-container">
   <div class="cards">
     <div class="card-deck">
@@ -51,17 +50,16 @@
 </div>
 
 <br />
-  <div class="centred-div-flex-container">
-    <div>
-      <button mat-raised-button (click)="OpenAddStudentDialog()">Add Student</button>
-    </div>
-    <div>
-      <mat-form-field>
-        <input matInput (keyup)="applyFilter($event.target.value)"
-               placeholder="Search..."/>
-      </mat-form-field>
-    </div>
+<div class="centred-div-flex-container">
+  <div>
+    <button mat-raised-button (click)="OpenAddStudentDialog()">Add Student</button>
   </div>
+  <div>
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search..." />
+    </mat-form-field>
+  </div>
+</div>
 
 <div class="mat-elevation-z8">
   <div style="overflow:auto;">
@@ -121,7 +119,7 @@
           <button mat-icon-button color="warn" (click)="deleteStudent(row.id)">
             <mat-icon>delete_outline</mat-icon>
           </button>
-          </mat-cell>
+        </mat-cell>
       </ng-container>
 
     </mat-table>
