Added Student validator to API.

--- a/src/StudentPortal/ClientApp/src/app/dashboard/edit-student/edit-student.component.html
+++ b/src/StudentPortal/ClientApp/src/app/dashboard/edit-student/edit-student.component.html
@@ -28,6 +28,7 @@
                  placeholder="First Name"
                  #FirstName="ngModel"
                  [(ngModel)]="studentService.formData.FirstName" />
+          <mat-icon matSuffix>person</mat-icon>
         </mat-form-field>
       </div>
       <div class="row">
@@ -45,6 +46,7 @@
                  placeholder="Middle Name"
                  #MiddleName="ngModel"
                  [(ngModel)]="studentService.formData.MiddleName" />
+          <mat-icon matSuffix>person_outline</mat-icon>
         </mat-form-field>
       </div>
 
@@ -56,6 +58,7 @@
                  placeholder="Last Name"
                  #LastName="ngModel"
                  [(ngModel)]="studentService.formData.LastName" />
+          <mat-icon matSuffix>person</mat-icon>
         </mat-form-field>
       </div>
       <div class="row">
